--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -12,40 +12,38 @@
     <div class="header-top">
       <span class="contact-info">📞 +250 788 773 640</span>
       <div class="right-section">
-        <select class="language-selector">
-          <option value="en">English</option>
-          <option value="fr">Français</option>
-        </select>
-        <span class="cart-info">My Cart: RWF 0</span>
+         <div class="icons">
+                <div class="icon"><i class="user-icon">👤</i></div>
+                <div class="icon">
+                    <i class="cart-icon">🛒</i></span>
+                    <span class="cart-text">My cart RWF0</span>
+                </div>
+            </div>
       </div>
     </div>
     <div class="header-main">
-      <img src="C:/Users/PC/Pictures/Camera Roll/logo.png" alt="Logo" class="logo">
+      <img src="c:\Users\matax\3D Objects\toner images\Leonardo_Phoenix_Design_a_modern_corporate_logo_for_MDK_Compan_03.png" alt="Logo" class="logo">
       <input type="text" class="search-bar" placeholder="Search here ...">
       <button class="search-btn">🔍</button>
     </div>
     <nav class="navigation">
       <button class="categories-btn">☰ Categories</button>
-      <a href="#">Home</a>
-      <a href="#">All Brands</a>
-      <a href="#">Discounted Products</a>
-      <a href="#">All Sellers</a>
-      <a href="#">Seller Zone</a>
+       <a href="Untitled-1.html">Home</a>
+       <a href="home.html">Products</a>
+       <a href="order.html">Order</a>
+       <a href="how it works.html">Workflow</a>
+       <a href="faq.html">FAQ</a>
     </nav>
   </header>
 
   <!-- Category Sidebar -->
   <aside class="category-sidebar">
     <ul>
-      <li>📺 Electronics</li>
-      <li>📺 TVs & Appliances</li>
-      <li>🧥 Men</li>
-      <li>👗 Women</li>
-      <li>👶 Baby & Kids</li>
-      <li>🛋️ Home & Furniture</li>
-      <li>📚 Sports, Books & More</li>
-      <li>🥦 Groceries</li>
-      <li>🔗 <a href="#">View More</a></li>
+      <li><a href="#">Ink Cartridges</a></li>
+      <li><a href="#">Toner Cartridges</a></li>
+      <li><a href="#">Printer Accessories</a></li>
+      <li><a href="#">Refill Kits</a></li>
+      <li><a href="#">Special Offers</a></li>
     </ul>
   </aside>
 
@@ -69,16 +67,15 @@
 
   <script src="image sliding.js"></script>
 
-    <!-- Brands Section -->
-    <section class="brands">
-      <h3>Brands</h3>
-      <div class="brand-logos">
-        <img src="C:/Users/PC/Pictures/Camera Roll/brand1.png" alt="Brand 1">
-        <img src="C:/Users/PC/Pictures/Camera Roll/brand2.png" alt="Brand 2">
-        <img src="C:/Users/PC/Pictures/Camera Roll/brand3.png" alt="Brand 3">
-      </div>
-    </section>
-  </main>
+  <!-- Brands Section -->
+  <section class="brands">
+    <h3>Brands</h3>
+    <div class="brand-logos">
+      <img src="C:/Users/PC/Pictures/Camera Roll/brand1.png" alt="Brand 1">
+      <img src="C:/Users/PC/Pictures/Camera Roll/brand2.png" alt="Brand 2">
+      <img src="C:/Users/PC/Pictures/Camera Roll/brand3.png" alt="Brand 3">
+    </div>
+  </section>
 </body>
 <script src="scripts.js"></script>
 </html>
