--- a/home.html
+++ b/home.html
@@ -11,24 +11,23 @@
         <div class="top-bar">
             <span class="phone-number">+250 782 799 120</span>
             <div class="language-selector">
-                <img src="flag.png" alt="flag icon" class="flag-icon">
+                <img src="c:\Users\matax\3D Objects\toner images\Kingdom, of, flag, united icon - Free download on Iconfinder.png" alt="flag icon" class="flag-icon">
                 <span>English</span>
                 <span class="dropdown-arrow">▼</span>
             </div>
         </div>
         <div class="navbar">
             <div class="logo">
-                <img src="c:\Users\PC\Pictures\vd.png" alt="Logo">
+                <img src="c:\Users\matax\3D Objects\toner images\Leonardo_Phoenix_Design_a_modern_corporate_logo_for_MDK_Compan_03.png" alt="Logo">
             </div>
             <div class="search-container">
                 <input type="text" placeholder="Search here ...">
                 <button type="submit"><i class="search-icon">🔍</i></button>
             </div>
             <div class="icons">
-                <div class="icon"><i class="favorite-icon">❤️</i><span class="badge">0</span></div>
                 <div class="icon"><i class="user-icon">👤</i></div>
                 <div class="icon">
-                    <i class="cart-icon">🛒</i><span class="badge">0</span>
+                    <i class="cart-icon">🛒</i></span>
                     <span class="cart-text">My cart RWF0</span>
                 </div>
             </div>
