--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -11,28 +11,35 @@
   <header>
     <div class="header-top">
       <span class="contact-info">📞 +250 788 773 640</span>
-      <div class="right-section">
-         <div class="icons">
-                <div class="icon"><i class="user-icon">👤</i></div>
-                <div class="icon">
-                    <i class="cart-icon">🛒</i></span>
-                    <span class="cart-text">My cart RWF0</span>
-                </div>
-            </div>
+      <div class="language-selector">
+        <img src="c:\Users\matax\3D Objects\toner images\Kingdom, of, flag, united icon - Free download on Iconfinder.png" alt="flag icon" class="flag-icon">
+        <span>English</span>
+        <span class="dropdown-arrow">▼</span>
+    </div>
+     
       </div>
     </div>
     <div class="header-main">
       <img src="c:\Users\matax\3D Objects\toner images\Leonardo_Phoenix_Design_a_modern_corporate_logo_for_MDK_Compan_03.png" alt="Logo" class="logo">
       <input type="text" class="search-bar" placeholder="Search here ...">
-      <button class="search-btn">🔍</button>
+      <div class="right-section">
+        <div class="icons">
+           <!-- Link the user icon to the login page -->
+           <div class="icon"><a href="login .html"><i class="user-icon">👤</i></a></div>
+               
+           <!-- Link the cart icon to the cart page -->
+           <div class="icon">
+               <a href="cart.html"><i class="cart-icon">🛒</i></a>
+               <span class="cart-text">My cart RWF0</span>
+           </div>
+       </div>
     </div>
     <nav class="navigation">
-      <button class="categories-btn">☰ Categories</button>
-       <a href="Untitled-1.html">Home</a>
-       <a href="home.html">Products</a>
-       <a href="order.html">Order</a>
-       <a href="how it works.html">Workflow</a>
-       <a href="faq.html">FAQ</a>
+      <a href="Untitled-1.html">Home</a>
+      <a href="home.html">Products</a>
+      <a href="order.html">Order</a>
+      <a href="how it works.html">Workflow</a>
+      <a href="faq.html">FAQ</a>
     </nav>
   </header>
 
@@ -50,7 +57,7 @@
   <div class="slider">
     <div class="slides">
       <div class="slide fade">
-        <img src="c:\Users\PC\3D Objects\MY PICS\xl.jpg" alt="Image 1">
+        <img src="c:\Users\matax\3D Objects\toner images\Leonardo_Phoenix_Create_a_visually_appealing_and_realistic_hom_3.jpg" alt="Image 1">
       </div>
       <div class="slide fade">
         <img src="image2.jpg" alt="Image 2">
